--- a/SentiPlaces/index.html
+++ b/SentiPlaces/index.html
@@ -42,7 +42,7 @@
 	<div class="jumbotron"> <!-- deixa o conteudo texto responsivo -->
 	  <div class="row">	
 		<div class="col-xs-6" id="left">
-			<div style="background-color:#D8D8D8" class="col-xs-12 text-center"><a href="index.php"><img  height="63px" src="css/SentiPlaces.png"/></a></div>
+			<div style="background-color:#D8D8D8" class="col-xs-12 text-center"><a href="index.html"><img  height="63px" src="css/SentiPlaces.png"/></a></div>
 			<div class="row"><br>
 				<div class="col-xs-8" id="left"><br>
 					<h4 id="restaurants_name">Waiting for a place...</h4>
@@ -51,9 +51,13 @@
 					<br>Choose a place category
 					<select class="form-control" id="category">
 						<option id="all_category">All places</option>
-						<option id="food_category">Food</option>
-						<option id="hotel_category">Hotel</option>
-						<option id="bar_category">Pubs</option>
+						<option id="arts_category" value="4d4b7104d754a06370d81259">Arts & Entertainment</option>
+						<option id="college_category" value="4d4b7105d754a06372d81259">College & University</option>
+						<option id="food_category" value="4d4b7105d754a06374d81259">Food</option>
+						<option id="nightlife_category" value="4d4b7105d754a06376d81259">Nightlife Spot</option>
+						<option id="outdoors_category" value="4d4b7105d754a06377d81259">Outdoors & Recreation</option>
+						<option id="shop_category" value="4d4b7105d754a06378d81259">Shop & Service</option>
+						<option id="travel_category" value="4d4b7105d754a06379d81259">Travel & Transport</option>
 					</select>
 				</div>
 			</div>
@@ -91,11 +95,11 @@
 		<div class="col-xs-6"><!--map-canvas will be postioned here-->
 			<div class="well"> Filter by Radius: <span id="radius"></span>km
 				<form action="" id="radius_option">
-					<div class = "text-center" ><input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="1" data-slider-max="16" data-slider-step="3" data-slider-value="1"/></div>
+					<div class = "text-center" ><input id="radius_slider" data-slider-id='ex1Slider' type="text" data-slider-min="1" data-slider-max="16" data-slider-step="3" data-slider-value="1"/></div>
 				</form>
 			</div>			
 			<div id="loader-wrapper">
-			<div id="loading" class="text-center" style="color:#D8D8D8;"><br><h1>Loading...</h1></div>
+			<br><h1><div id="loading" class="text-center" style="color:#D8D8D8;">Loading...</div></h1>
 			<div id="googleMap" class="img-responsive"></div>
 		</div>
 	  </div>
