--- a/SentiPlaces/index.html
+++ b/SentiPlaces/index.html
@@ -11,6 +11,7 @@
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 		<link href="css/styles.css" rel="stylesheet">	
+		<link href="css/loading.css" rel="stylesheet">
 		<link href="css/bootstrap-slider.css" rel="stylesheet">			
 	</head>
 	<body onload="initMap()"> 
@@ -90,7 +91,17 @@
 				</form>
 			</div>			
 			<div id="loader-wrapper">
-			<h1><div id="loading" class="text-center" style="color:#D8D8D8;">Loading...</div></h1>
+			<!--<h1><div id="loading" class="text-center" style="color:#D8D8D8;">Loading...</div></h1>-->
+			<br><h1><div id="loading" class="text-center">Loading
+				<div id="loading24">
+					<div id="loading-center">
+						<div id="loading-center-absolute">
+							<div class="object"></div><div class="object"></div><div class="object"></div><div class="object"></div><div class="object"></div>
+							<div class="object"></div><div class="object"></div><div class="object"></div><div class="object"></div><div class="object"></div>
+						</div>
+					</div>
+				</div>
+			</div></h1>
 			<div id="googleMap" class="img-responsive"></div>
 		</div>
 	  </div>
