--- a/SentiPlaces/index.html
+++ b/SentiPlaces/index.html
@@ -22,7 +22,7 @@
       <form class="navbar-form">
         <div class="form-group" style="display:inline;">
           <div class="input-group">
-			<input type="text" id="pac-input" class="controls form-control" placeholder="What are searching for?" style="width:580px" onclick="getSearchLocation()"></input>
+			<input type="text" id="pac-input" class="controls form-control" placeholder="What are you looking for?" style="width:580px" onclick="getSearchLocation()"></input>
         </div>
 		</div>
       </form>
@@ -87,7 +87,7 @@
 		<div class="col-xs-6"><!--map-canvas will be postioned here-->
 			<div class="well" id="slider_bar">  <span id="radius"></span>km
 				<form action="" id="radius_option">
-					<div class = "text-center" ><input id="radius_slider" data-slider-id='ex1Slider' type="text" data-slider-min="1" data-slider-max="16" data-slider-step="3" data-slider-value="1"/></div>
+					<div class = "text-center" ><input id="radius_slider" data-slider-id='ex1Slider' type="text" data-slider-min="1" data-slider-max="15" data-slider-step="1" data-slider-value="1"/></div>
 				</form>
 			</div>			
 			<div id="loader-wrapper">
